Fix background scrolling behind modal in some clients

--- a/app/styles/_nypr-account-modal.scss
+++ b/app/styles/_nypr-account-modal.scss
@@ -52,3 +52,7 @@
   width: 15px;
   height: 15px;
 }
+
+body.has-nypr-account-modal-open {
+  overflow: hidden;
+}
